Fixed: Change visibility to hidden for end-game

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -162,7 +162,7 @@ li {
     width: 62vw;
     height: 36vh;
 
-    visibility: visible;
+    visibility: hidden;
 
     position: absolute;
     top: 73%;
